--- a/MatMul/MatMul.ipynb
+++ b/MatMul/MatMul.ipynb
@@ -18,97 +18,60 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import cupy as cp\n",
-        "import time\n",
-        "\n",
-        "def matrix_multiply_cpu(matrix_a, matrix_b):\n",
-        "    # Проверка корректности перемножения\n",
-        "    if matrix_a.shape[1] != matrix_b.shape[0]:\n",
-        "        raise ValueError(\"Неправильные размеры матриц для перемножения\")\n",
-        "\n",
-        "    start_time = time.time()\n",
-        "    result = np.dot(matrix_a, matrix_b)\n",
-        "    end_time = time.time()\n",
-        "\n",
-        "    return result, end_time - start_time\n",
-        "\n",
-        "def matrix_multiply_gpu(matrix_a, matrix_b):\n",
-        "    # Проверка корректности перемножения\n",
-        "    if matrix_a.shape[1] != matrix_b.shape[0]:\n",
-        "        raise ValueError(\"Неправильные размеры матриц для перемножения\")\n",
-        "\n",
-        "    # Перенос матриц на GPU\n",
-        "    matrix_a_gpu = cp.asarray(matrix_a)\n",
-        "    matrix_b_gpu = cp.asarray(matrix_b)\n",
-        "\n",
-        "    start_time = time.time()\n",
-        "    result_gpu = cp.dot(matrix_a_gpu, matrix_b_gpu)\n",
-        "    result = cp.asnumpy(result_gpu)  # Возвращаем результат на CPU\n",
-        "    end_time = time.time()\n",
-        "\n",
-        "    return result, end_time - start_time\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    matrix_size = (3000, 3000)\n",
-        "    matrix_a = np.random.rand(*matrix_size)\n",
-        "    matrix_b = np.random.rand(*matrix_size)\n",
-        "\n",
-        "    result_cpu, time_cpu = matrix_multiply_cpu(matrix_a, matrix_b)\n",
-        "    result_gpu, time_gpu = matrix_multiply_gpu(matrix_a, matrix_b)\n",
-        "\n",
-        "    print(f\"Результат на CPU:\\n{result_cpu}\")\n",
-        "    print(f\"Время на CPU: {time_cpu} секунд\")\n",
-        "\n",
-        "    print(f\"Результат на GPU:\\n{result_gpu}\")\n",
-        "    print(f\"Время на GPU: {time_gpu} секунд\")\n"
-      ],
+      "execution_count": 14,
       "metadata": {
-        "id": "Hb_PV4_WDnqt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e128733f-1499-4ae1-9a36-33172095ef92"
+        "id": "8t84lhIB_QzA",
+        "outputId": "1b897f7a-2613-4b7b-ed0a-df1b083c75a9"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Результат на CPU:\n",
-            "[[739.14460055 725.79270794 734.30940358 ... 730.67158594 735.4860924\n",
-            "  725.16192507]\n",
-            " [769.01639523 756.24795554 760.66273554 ... 764.36234787 774.65111518\n",
-            "  762.39898492]\n",
-            " [772.47388716 772.34990651 775.49073635 ... 766.22091271 770.56368819\n",
-            "  763.97032642]\n",
-            " ...\n",
-            " [758.49668321 753.99246184 744.10201339 ... 759.4877092  761.6058053\n",
-            "  754.35922891]\n",
-            " [748.98869899 741.8361989  753.5202473  ... 751.10382443 743.8806863\n",
-            "  743.85191651]\n",
-            " [764.84645157 768.654932   772.44815986 ... 767.46906557 764.94310842\n",
-            "  766.18348357]]\n",
-            "Время на CPU: 2.168550491333008 секунд\n",
-            "Результат на GPU:\n",
-            "[[739.14460055 725.79270794 734.30940358 ... 730.67158594 735.4860924\n",
-            "  725.16192507]\n",
-            " [769.01639523 756.24795554 760.66273554 ... 764.36234787 774.65111518\n",
-            "  762.39898492]\n",
-            " [772.47388716 772.34990651 775.49073635 ... 766.22091271 770.56368819\n",
-            "  763.97032642]\n",
-            " ...\n",
-            " [758.49668321 753.99246184 744.10201339 ... 759.4877092  761.6058053\n",
-            "  754.35922891]\n",
-            " [748.98869899 741.8361989  753.5202473  ... 751.10382443 743.8806863\n",
-            "  743.85191651]\n",
-            " [764.84645157 768.654932   772.44815986 ... 767.46906557 764.94310842\n",
-            "  766.18348357]]\n",
-            "Время на GPU: 0.4463353157043457 секунд\n"
+            "Сумма на CPU: 499889.0654120432, Время выполнения на CPU: 0.0007088184356689453 секунд\n",
+            "Сумма на GPU: 499889.0654120431, Время выполнения на GPU: 0.0024118423461914062 секунд\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "import cupy as cp\n",
+        "import time\n",
+        "\n",
+        "# Функция для сложения элементов вектора на CPU\n",
+        "def vector_sum_cpu(vector):\n",
+        "    return np.sum(vector)\n",
+        "\n",
+        "# Функция для сложения элементов вектора на GPU с использованием CUDA\n",
+        "def vector_sum_gpu(vector):\n",
+        "    vector_gpu = cp.asarray(vector)\n",
+        "    result_gpu = cp.sum(vector_gpu)\n",
+        "    result_cpu = cp.asnumpy(result_gpu)\n",
+        "    return result_cpu\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Генерация вектора с случайными значениями\n",
+        "    vector_size = 1000000\n",
+        "    vector = np.random.rand(vector_size)\n",
+        "\n",
+        "    # Сложение на CPU\n",
+        "    start_time_cpu = time.time()\n",
+        "    result_cpu = vector_sum_cpu(vector)\n",
+        "    end_time_cpu = time.time()\n",
+        "\n",
+        "    cpu_time = end_time_cpu - start_time_cpu\n",
+        "    print(f\"Сумма на CPU: {result_cpu}, Время выполнения на CPU: {cpu_time} секунд\")\n",
+        "\n",
+        "    # Сложение на GPU\n",
+        "    start_time_gpu = time.time()\n",
+        "    result_gpu = vector_sum_gpu(vector)\n",
+        "    end_time_gpu = time.time()\n",
+        "\n",
+        "    gpu_time = end_time_gpu - start_time_gpu\n",
+        "    print(f\"Сумма на GPU: {result_gpu}, Время выполнения на GPU: {gpu_time} секунд\")"
       ]
     }
   ]
