--- a/MatMul/MatMul.ipynb
+++ b/MatMul/MatMul.ipynb
@@ -18,60 +18,102 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8t84lhIB_QzA",
-        "outputId": "1b897f7a-2613-4b7b-ed0a-df1b083c75a9"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Сумма на CPU: 499889.0654120432, Время выполнения на CPU: 0.0007088184356689453 секунд\n",
-            "Сумма на GPU: 499889.0654120431, Время выполнения на GPU: 0.0024118423461914062 секунд\n"
-          ]
-        }
-      ],
       "source": [
         "import numpy as np\n",
         "import cupy as cp\n",
         "import time\n",
         "\n",
-        "# Функция для сложения элементов вектора на CPU\n",
-        "def vector_sum_cpu(vector):\n",
-        "    return np.sum(vector)\n",
+        "def matrix_multiply_cpu(matrix_a, matrix_b):\n",
+        "    # Проверка корректности перемножения\n",
+        "    if matrix_a.shape[1] != matrix_b.shape[0]:\n",
+        "        raise ValueError(\"Неправильные размеры матриц для перемножения\")\n",
         "\n",
-        "# Функция для сложения элементов вектора на GPU с использованием CUDA\n",
-        "def vector_sum_gpu(vector):\n",
-        "    vector_gpu = cp.asarray(vector)\n",
-        "    result_gpu = cp.sum(vector_gpu)\n",
-        "    result_cpu = cp.asnumpy(result_gpu)\n",
-        "    return result_cpu\n",
+        "    result = np.zeros((matrix_a.shape[0], matrix_b.shape[1]))\n",
+        "\n",
+        "    start_time = time.time()\n",
+        "    for i in range(matrix_a.shape[0]):\n",
+        "        for j in range(matrix_b.shape[1]):\n",
+        "            for k in range(matrix_a.shape[1]):\n",
+        "                result[i, j] += matrix_a[i, k] * matrix_b[k, j]\n",
+        "    end_time = time.time()\n",
+        "\n",
+        "    return result, end_time - start_time\n",
+        "\n",
+        "def matrix_multiply_gpu(matrix_a, matrix_b):\n",
+        "    # Проверка корректности перемножения\n",
+        "    if matrix_a.shape[1] != matrix_b.shape[0]:\n",
+        "        raise ValueError(\"Неправильные размеры матриц для перемножения\")\n",
+        "\n",
+        "    # Перенос матриц на GPU\n",
+        "    matrix_a_gpu = cp.asarray(matrix_a)\n",
+        "    matrix_b_gpu = cp.asarray(matrix_b)\n",
+        "\n",
+        "    start_time = time.time()\n",
+        "    result_gpu = cp.dot(matrix_a_gpu, matrix_b_gpu)\n",
+        "    result = cp.asnumpy(result_gpu)  # Возвращаем результат на CPU\n",
+        "    end_time = time.time()\n",
+        "\n",
+        "    return result, end_time - start_time\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    # Генерация вектора с случайными значениями\n",
-        "    vector_size = 1000000\n",
-        "    vector = np.random.rand(vector_size)\n",
+        "    matrix_size = (1000, 1000)\n",
+        "    matrix_a = np.random.rand(*matrix_size)\n",
+        "    matrix_b = np.random.rand(*matrix_size)\n",
         "\n",
-        "    # Сложение на CPU\n",
-        "    start_time_cpu = time.time()\n",
-        "    result_cpu = vector_sum_cpu(vector)\n",
-        "    end_time_cpu = time.time()\n",
+        "    result_cpu, time_cpu = matrix_multiply_cpu(matrix_a, matrix_b)\n",
+        "    result_gpu, time_gpu = matrix_multiply_gpu(matrix_a, matrix_b)\n",
         "\n",
-        "    cpu_time = end_time_cpu - start_time_cpu\n",
-        "    print(f\"Сумма на CPU: {result_cpu}, Время выполнения на CPU: {cpu_time} секунд\")\n",
+        "    print(f\"Результат на CPU:\\n{result_cpu}\")\n",
+        "    print(f\"Время на CPU: {time_cpu} секунд\")\n",
         "\n",
-        "    # Сложение на GPU\n",
-        "    start_time_gpu = time.time()\n",
-        "    result_gpu = vector_sum_gpu(vector)\n",
-        "    end_time_gpu = time.time()\n",
-        "\n",
-        "    gpu_time = end_time_gpu - start_time_gpu\n",
-        "    print(f\"Сумма на GPU: {result_gpu}, Время выполнения на GPU: {gpu_time} секунд\")"
+        "    print(f\"Результат на GPU:\\n{result_gpu}\")\n",
+        "    print(f\"Время на GPU: {time_gpu} секунд\")"
+      ],
+      "metadata": {
+        "id": "Hb_PV4_WDnqt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57b93809-8253-4f68-f021-50859a56db12"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Результат на CPU:\n",
+            "[[243.18308409 249.12520272 252.88324306 ... 248.56073694 251.58382753\n",
+            "  238.84813173]\n",
+            " [244.89363166 256.14268848 252.42904967 ... 252.2370358  252.68774878\n",
+            "  241.81672409]\n",
+            " [243.21589992 257.13578152 256.92665338 ... 247.41355395 250.17217928\n",
+            "  240.86652593]\n",
+            " ...\n",
+            " [248.99109108 258.15349436 260.98494705 ... 259.19589889 259.30617321\n",
+            "  246.14162672]\n",
+            " [243.10765788 256.0719056  257.54818472 ... 254.6849639  251.36533832\n",
+            "  242.18877473]\n",
+            " [250.25414595 255.8101921  260.94872877 ... 258.4487663  257.74523575\n",
+            "  246.55741561]]\n",
+            "Время на CPU: 670.6450788974762 секунд\n",
+            "Результат на GPU:\n",
+            "[[243.18308409 249.12520272 252.88324306 ... 248.56073694 251.58382753\n",
+            "  238.84813173]\n",
+            " [244.89363166 256.14268848 252.42904967 ... 252.2370358  252.68774878\n",
+            "  241.81672409]\n",
+            " [243.21589992 257.13578152 256.92665338 ... 247.41355395 250.17217928\n",
+            "  240.86652593]\n",
+            " ...\n",
+            " [248.99109108 258.15349436 260.98494705 ... 259.19589889 259.30617321\n",
+            "  246.14162672]\n",
+            " [243.10765788 256.0719056  257.54818472 ... 254.6849639  251.36533832\n",
+            "  242.18877473]\n",
+            " [250.25414595 255.8101921  260.94872877 ... 258.4487663  257.74523575\n",
+            "  246.55741561]]\n",
+            "Время на GPU: 0.03273630142211914 секунд\n"
+          ]
+        }
       ]
     }
   ]
