--- a/VecSum/VecSum.ipynb
+++ b/VecSum/VecSum.ipynb
@@ -18,21 +18,21 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8t84lhIB_QzA",
-        "outputId": "1b897f7a-2613-4b7b-ed0a-df1b083c75a9"
+        "outputId": "cfebc8eb-1d8a-451a-8831-34d0a5d67f4d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Сумма на CPU: 499889.0654120432, Время выполнения на CPU: 0.0007088184356689453 секунд\n",
-            "Сумма на GPU: 499889.0654120431, Время выполнения на GPU: 0.0024118423461914062 секунд\n"
+            "Сумма на CPU: 500208.356532953, Время выполнения на CPU: 0.20639610290527344 секунд\n",
+            "Сумма на GPU: 500208.3565329657, Время выполнения на GPU: 0.4161536693572998 секунд\n"
           ]
         }
       ],
@@ -43,7 +43,10 @@
         "\n",
         "# Функция для сложения элементов вектора на CPU\n",
         "def vector_sum_cpu(vector):\n",
-        "    return np.sum(vector)\n",
+        "    result_cpu = 0\n",
+        "    for element in vector:\n",
+        "        result_cpu += element\n",
+        "    return result_cpu\n",
         "\n",
         "# Функция для сложения элементов вектора на GPU с использованием CUDA\n",
         "def vector_sum_gpu(vector):\n",
